[package]
name = "an-editor-the-fork-of-loop"
version = "0.0.1"
authors = ["Michał Krzysztof Feiler <m@mikf.pl>"]
edition = "2018"
include = ["src/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.5"
unicode-segmentation = "1.6.0"
